lab/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | LP error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI
   37     | IF LP error RP Stmt
   38     | IF LP error RP Stmt ELSE Stmt
   39     | WHILE LP error RP Stmt

   40 DefList: Def DefList
   41        | %empty

   42 Def: Specifier DecList SEMI
   43    | Specifier error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | LP error RP

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 22 27 36 37 38 39 43 66
INT (258) 19 64
FLOAT (259) 65
SEMI (260) 4 5 7 8 30 32 36 42 43
COMMA (261) 10 23 45 67
ASSIGNOP (262) 47 48
RELOP (263) 51
PLUS (264) 52
MINUS (265) 53 57
STAR (266) 54
DIV (267) 55
AND (268) 49
OR (269) 50
DOT (270) 62
NOT (271) 58
LP (272) 20 21 22 33 34 35 37 38 39 56 59 60 66
RP (273) 20 21 22 33 34 35 37 38 39 56 59 60 66
LB (274) 19 61
RB (275) 19 61
LC (276) 13 26
RC (277) 13 26 27
STRUCT (278) 13 14
RETURN (279) 32
IF (280) 33 34 37 38
ELSE (281) 34 38
WHILE (282) 35 39
TYPE (283) 11
ID (284) 15 17 18 20 21 59 60 62 63
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 25 42 43
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 9 10 19 25 46 47
FunDec (41)
    on left: 20 21 22, on right: 6 7
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 6 31
StmtList (45)
    on left: 28 29, on right: 26 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 28 33 34 35 37
    38 39
DefList (47)
    on left: 40 41, on right: 13 26 40
Def (48)
    on left: 42 43, on right: 40
DecList (49)
    on left: 44 45, on right: 42 45
Dec (50)
    on left: 46 47, on right: 44 45
Exp (51)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66, on right: 30 32 33 34 35 47 48 49 50 51 52 53 54 55 56 57 58
    61 62 67 68
Args (52)
    on left: 67 68, on right: 59 67


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    SEMI  shift, and go to state 15
    LP    shift, and go to state 16
    ID    shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

   22 FunDec: LP . error RP

    error  shift, and go to state 22


State 17

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   22 FunDec: LP error . RP

    RP  shift, and go to state 34


State 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    RP      shift, and go to state 35
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 19


State 26

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 41


State 27

   27 CompSt: error . RC

    RC  shift, and go to state 42


State 28

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 29

   26 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 33


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   42 Def: Specifier . DecList SEMI
   43    | Specifier . error SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 33

   40 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 33


State 34

   22 FunDec: LP error RP .

    $default  reduce using rule 22 (FunDec)


State 35

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 36

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 50


State 37

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 38

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 24 (VarList)


State 39

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 40

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 41

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 42

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 43

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 29
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    ID      shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 44

   43 Def: Specifier error . SEMI

    SEMI  shift, and go to state 68


State 45

   19 VarDec: VarDec . LB INT RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 26

    $default  reduce using rule 46 (Dec)


State 46

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


State 47

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 44 (DecList)


State 48

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 49

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 50

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


State 51

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 52

   23 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 38


State 53

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 54

   27 CompSt: error . RC
   36 Stmt: error . SEMI

    SEMI  shift, and go to state 73
    RC    shift, and go to state 42


State 55

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 56

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 57

   57 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 74


State 58

   58 Exp: NOT . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 75


State 59

   56 Exp: LP . Exp RP
   66    | LP . error RP

    error  shift, and go to state 76
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 77


State 60

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 78


State 61

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP error RP Stmt
   38     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 62

   35 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . LP error RP Stmt

    LP  shift, and go to state 80


State 63

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 81

    $default  reduce using rule 63 (Exp)


State 64

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 65

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 66

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 29
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    ID      shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 83
    Stmt      go to state 66
    Exp       go to state 67


State 67

   30 Stmt: Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 68

   43 Def: Specifier error SEMI .

    $default  reduce using rule 43 (Def)


State 69

   47 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 95


State 70

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 71

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 96
    Dec      go to state 47


State 72

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 73

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 74

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 57 (Exp)


State 75

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 58 (Exp)


State 76

   66 Exp: LP error . RP

    RP  shift, and go to state 97


State 77

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 98
    LB        shift, and go to state 94


State 78

   32 Stmt: RETURN Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 79

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . error RP Stmt
   38     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 100
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 101


State 80

   35 Stmt: WHILE LP . Exp RP Stmt
   39     | WHILE LP . error RP Stmt

    error  shift, and go to state 102
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 103


State 81

   59 Exp: ID LP . Args RP
   60    | ID LP . RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 104
    ID     shift, and go to state 63

    Exp   go to state 105
    Args  go to state 106


State 82

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 83

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 84

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 85

   48 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 107


State 86

   51 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 108


State 87

   52 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 109


State 88

   53 Exp: Exp MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 110


State 89

   54 Exp: Exp STAR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 111


State 90

   55 Exp: Exp DIV . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 112


State 91

   49 Exp: Exp AND . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 113


State 92

   50 Exp: Exp OR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 114


State 93

   62 Exp: Exp DOT . ID

    ID  shift, and go to state 115


State 94

   61 Exp: Exp LB . Exp RB

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    ID     shift, and go to state 63

    Exp  go to state 116


State 95

   47 Dec: VarDec ASSIGNOP Exp .
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94
